# Pdf_to_Markmap_AI

./: .gitignore  README.md  env.template  manage.py  pyproject.toml  requirements.txt
chat_app/: firebase_storage.py  forms.py  gemini_chatbot.py  models.py  urls.py  views.py
chat_app/migrations/: 0001_initial.py  0002_rename_chatbot_chatbotresponse.py  0003_chatbotresponse_response_style.py
chat_app/static/css/: all_responses.css  base.css  navbar.css  pdf_form.css
chat_app/templates/chat_app/: all_responses.html  base.html  index.html  markmap_template.html  pdf_form.html
pdf_to_markmap/: asgi.py  config.py  settings.py  urls.py  wsgi.py
