[tool.poetry]
name = "pdf-to-markmap"
version = "0.1.0"
description = ""
authors = ["Fer-Bar <linofernando2703@gmail.com>"]
readme = "README.md"
packages = [{include = "pdf_to_markmap"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
