[tool.poetry]
name = "pdf-to-markmap"
version = "0.1.0"
description = ""
authors = ["Fer-Bar <linofernando2703@gmail.com>"]
readme = "README.md"
packages = [{include = "pdf_to_markmap"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"
djangorestframework = "^3.15.2"
google-generativeai = "^0.8.4"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.8.0"
google-genai = "^1.3.0"
firebase-admin = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
